feat(renderer): add advanced markdown and source previews
1. Upgrade the renderer stack and React-compatible UI plumbing while preserving Reagent/re-frame behavior.
2. Add bounded render metadata retention, live-refresh stability, and SVG scroll handling improvements.
3. Add filename and glob filetype mappings, including default Cargo.lock TOML highlighting support.
4. Add cached MathJax SVG rendering, inline Mermaid rendering, and direct Mermaid file previews.
5. Fix badge image row layout and copy behavior for preview/source selections and context menus.
6. Expand documentation, PlantUML diagrams, threat-model notes, and architecture references for the new renderer design.
7. Add regression coverage for Markdown math/diagrams, source copy, grammar mappings, Electron smoke paths, and renderer warnings.